<resources>
    <string name="app_name">SafeKeyboard</string>
    <string name="description">SafeKeyboard</string>
    <string name="safe_keyboard">1药网专属安全键盘</string>
    <string name="keyboard_key1">"&#64;"</string>
    <string name="keyboard_key2">"&#38;"</string>
    <string name="keyboard_key3">\"</string>
    <string name="keyboard_key4">"&#60;"</string>
    <string name="keyboard_key5">"&#62;"</string>
    <string name="keyboard_system">系统键盘</string>
    <string name="keyboard_demo_new">"安全软键盘"</string>
    <string name="keyboard_demo_new2">安全软键盘(数字)</string>
    <string name="keyboard_demo_new3">安全软键盘(IdCard)</string>
    <string name="mLabelTextSize">mLabelTextSize</string>
    <string name="scrollview_edit_test">ScrollView Edit Test</string>
    <string name="alert_dialog_test">Alert Dialog Test</string>
    <string name="use_safe_alert">AlertDialog使用SafeKeyboard</string>
    <string name="alert_test">Alert Dialog Test</string>
    <string name="popup_test">Popup Window Test</string>
    <string name="use_safe_pop">PopupWindow使用SafeKeyboard</string>
    <string name="error_param_null_inflater">错误的参数, LayoutInflater 为 null</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="scroll_view_test">Scroll View Test</string>

    <!-- KeyboardView - accessibility support -->
    <!-- Description of the Alt button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_alt">Alt</string>
    <!-- Description of the Cancel button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_cancel">Cancel</string>
    <!-- Description of the Delete button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_delete">Delete</string>
    <!-- Description of the Done button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_done">Done</string>
    <!-- Description of the Mode change button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_mode_change">Mode change</string>
    <!-- Description of the Shift button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_shift">Shift</string>
    <!-- Description of the Enter button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardview_keycode_enter">Enter</string>

</resources>
